fix: add wrap to filters

--- a/online-store/src/components/view/filters/_filters-style.scss
+++ b/online-store/src/components/view/filters/_filters-style.scss
@@ -2,6 +2,7 @@
     padding: 20px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 10px;
 
     .filters {
